--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       - "26656:26656"
     restart: unless-stopped
     volumes:
-      - native_volume:/app/.native
+      - native_volume:/app/.gonative
       - ./entrypoint.sh:/app/entrypoint.sh
 
 volumes:
